--- a/src/Components/CustomerPlaces/Customer.css
+++ b/src/Components/CustomerPlaces/Customer.css
@@ -14,3 +14,22 @@
     object-fit: cover;
     border-radius: 10px;
 }
+.big {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+.popup {
+    max-width: 90vw;
+    max-height: 90vh;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.4);
+    background-color: white;
+}
