--- a/src/Components/Placedata/Placedata.css
+++ b/src/Components/Placedata/Placedata.css
@@ -30,3 +30,22 @@
 .images img:nth-child(5) {
     height: 23em;
 }
+.big-place {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+.popup-place {
+    max-width: 90vw;
+    max-height: 90vh;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.4);
+    background-color: white;
+}
