--- a/src/Components/Places/Places.css
+++ b/src/Components/Places/Places.css
@@ -1,6 +1,8 @@
 .places {
     margin: 80px auto;
     width: 90%;
+    max-width: 1200px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,15 +13,17 @@
     border-radius: 10px;
     display: block;
     height: 345px;
+    object-fit: cover;
 }
 .place {
   position: relative;
   width: 100%;
-  max-width: 400px; /* adjust as needed */
-  aspect-ratio: 4 / 3; /* maintain proportion */
+  max-width: 400px; 
+  aspect-ratio: 4 / 3; 
   overflow: hidden;
   border-radius: 12px;
   cursor: pointer;
+  flex-wrap: wrap;
 }
 .hawai {
   width: 100%;
@@ -38,7 +42,9 @@
   font-size: 24px;
   opacity: 0;
   transition: opacity 0.4s ease;
-  pointer-events: none; /* avoids hover blocking */
+  pointer-events: none; 
+  border-radius: 12px;
+  overflow: hidden;
 }
 .place:hover .caption {
     opacity: 1;
