--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,5 +1,5 @@
 .about {
-    margin: 100px auto;
+    padding: 100px auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,13 +30,13 @@
     font-size: 40px;
     font-weight: 600;
     color: #2d232e;
-    margin-top: -40px;
-    margin-bottom: 10px;
-    margin-left: 35px;
+    padding-top: -40px;
+    padding-bottom: 10px;
+    padding-left: 35px;
     max-width: 400px;
 }
 .about p {
     color: #2d232e;
-    margin-bottom: 15px;
-    margin-left: 40px;
+    padding-bottom: 15px;
+    padding-left: 40px;
 }
