--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,5 +3,10 @@
   text-align: center;
   padding: 20px 0;
   font-size: 12px;
-  margin-top: 100px;
+  padding-top: 100px;
+}
+.transparent-footer {
+  background-color: transparent !important;
+  position: relative;
+  z-index: 2;
 }
