--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,5 @@
 nav {
     width: 100%;
-    /* background: #5abcff; */
     color: white;
     padding: 4px 0;
     position: fixed;
@@ -9,7 +8,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 9999;
+    background: transparent !important;
+    backdrop-filter: none !important;
 }
 .logo {
     width: 180px;
@@ -22,11 +23,13 @@ nav ul li {
     cursor: pointer;
 }
 .darkNav {
-    background: #5abcff;
-    transition: 0.5s;
+    background: transparent !important;
 }
 .placeholder::placeholder {
     color: white;
     opacity: 1;
     padding-left: 5px;
+}
+.text-black {
+  color: black;
 }
