--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,3 +5,8 @@ p {
     font-size: 25px;
     padding-top: 10px;
 }
+@media(max-width: 727px) {
+    .contact {
+        margin-top: 150px;
+    }
+}
