--- a/src/Components/Hotels/Hotels.css
+++ b/src/Components/Hotels/Hotels.css
@@ -42,3 +42,32 @@
     box-shadow: 0 0 15px rgba(255,255,255,0.4);
     background-color: white;
 }
+@media(max-width: 727px) {
+  .hotels-title {
+    font-size: 45px;
+    margin-top: 40px;
+  }
+  .hotels-img {
+    width: 220px;
+  }
+  .hotels-card {
+    flex-direction: column;
+  }
+  .hotels-right {
+    margin-top: -60px;
+  }
+  .container div p {
+    font-size: 20px;
+  }
+}
+@media(min-width: 728px) and (max-width: 1023px) {
+  .hotels-card {
+    flex-direction: column;
+  }
+  .hotels-right {
+    margin-top: -60px;
+  }
+  .container div p {
+    font-size: 25px;
+  }
+}
