--- a/src/Components/Placedata/Placedata.css
+++ b/src/Components/Placedata/Placedata.css
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 5px;
+    column-gap: 0px;
 }
 .images img {
     width: 100%;
@@ -47,5 +48,49 @@
     max-height: 90vh;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(255,255,255,0.4);
-    background-color: white;
+    background-color: transparent;
+}
+@media(max-width: 727px) {
+    .name {
+        font-size: 60px;
+        margin-top: 50px;
+    }
+    .images {
+        grid-template-columns: repeat(2,1fr);
+        gap: 5px;
+        column-gap: 0px;
+    }
+    .images img {
+        width: 13em; 
+        height: auto;
+    }
+    .images img:nth-child(4) {
+        margin-top: 20px;
+    }
+    .images img:nth-child(5) {
+        height: 25em;
+    }
+    .description {
+        font-size: 20px;
+        margin-top: -15px;
+    }
+}
+@media(min-width: 728px) and (max-width: 1023px) {
+    .name {
+        font-size: 80px;
+        margin-top: 20px;
+    }
+    .images img {
+        width: 13.5em;
+    }
+    .images img:nth-child(2) {
+        height: 17.5em;
+    }
+    .images img:nth-child(5) {
+        height: 25em;
+    }
+    .description {
+        font-size: 25px;
+        margin-top: -15px;
+    }
 }
