--- a/src/Components/Places/Places.css
+++ b/src/Components/Places/Places.css
@@ -50,3 +50,26 @@
     opacity: 1;
     padding-top: 0;
 }
+@media(max-width: 727px) {
+  .places {
+    height: 250px;
+    width: 300px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 13px;
+    margin-top: 15px;
+  }
+  .place img {
+    margin-top: -10px;
+  }
+}
+@media(min-width: 728px) and (max-width: 1023px) {
+  .place img {
+    margin-top: -10px;
+    width: 300px;
+    height: 350px;
+  }
+  .places {
+    gap: 4px;
+  }
+}
